adding team's secondary color around the border
